Add launcher when DND'ing an app from launcher menus to the Task Manager.

BUG:346055